BUGFIX z-index of PrimaryTopNav dropdown

--- a/src/components/topNav/primaryTopNav/PrimaryTopNav.module.css
+++ b/src/components/topNav/primaryTopNav/PrimaryTopNav.module.css
@@ -44,6 +44,7 @@
 
 .primary .li:hover .dropdown {
   display: block;
+  z-index: 1;
 }
 
 .dropdown {
